updating meta data

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,21 @@
 name = "avl_tree"
 version = "0.2.0"
 authors = ["Cornelius Aschermann <coco@hexgolems.com>"]
+description = "A simple AVL Tree implementation"
+
+# These URLs point to more information about the repository
+#documentation = "..."
+homepage = "https://github.com/ranmrdrakono/avl_tree"
+#repository = "..."
+
+keywords = ["datastructure","avl", "tree", "map"]
+
+# This is a string description of the license for this package. Currently
+# crates.io will validate the license provided against a whitelist of known
+# license identifiers from http://spdx.org/licenses/. Multiple licenses can
+# be separated with a `/`
+license = "GPL-2.0"
+
 [dependencies]
 rand = "*" # Or a specific version
 time = "*"
